--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -23,6 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <base href="/" />
     <link href="../src/" rel="stylesheet">
     <title>Pi Day</title>
   </head>
